Fixed responsive issues on small devices and browser size

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -46,7 +46,7 @@ section {
   .nav-item--title {
     color: #33363b;
     font-size: 2.75rem;
-    font-weight: 300;
+    font-weight: 400;
     letter-spacing: 5px;
     margin: 0;
     padding: 0; }
@@ -54,22 +54,20 @@ section {
     color: #33363b;
     font-size: 1.15rem;
     font-weight: 600;
-    margin-bottom: 10px;
     opacity: 0.8;
+    margin-top: -15px;
     text-align: center; }
 
 .hero {
-  margin-top: -20px;
-  padding-top: 0;
   width: 100%; }
   .hero-inner {
-    min-height: 30vh;
+    min-height: 60vh;
     background: linear-gradient(rgba(51, 54, 59, 0.6), rgba(51, 54, 59, 0.3)), url("https://images.unsplash.com/photo-1521185496955-15097b20c5fe?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b73970e97b923e72be9355cb15099091&auto=format&fit=crop&w=1294&q=80") no-repeat right center/cover;
     position: relative; }
   .hero-content {
     width: 100%;
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 0;
     transform: translateY(-50%);
     text-align: center; }
@@ -88,12 +86,14 @@ section {
   margin: 0;
   padding: 0;
   text-align: center; }
-  .header .wrapper {
-    margin-bottom: 2.5rem;
-    border-bottom: 3px solid #7ebc59; }
+  .header-top {
+    border-bottom: 3px solid #7ebc59;
+    margin-bottom: 10px; }
 
 .logo {
-  color: #7ebc59; }
+  color: #7ebc59;
+  font-size: 3rem;
+  margin: 0; }
 
 /*============ Work Styles ============*/
 .work {
@@ -111,7 +111,7 @@ section {
     .work-item--img:hover {
       opacity: 0.6; }
   .work-item--title {
-    font-size: 1.15rem;
+    font-size: 1rem;
     margin-top: 10px;
     text-align: center;
     text-transform: uppercase; }
@@ -250,7 +250,7 @@ section {
       margin-top: -5px;
       text-align: right; }
   .hero-inner {
-    min-height: 35vh; }
+    min-height: 45vh; }
   .hero-content--title {
     font-size: 2.5rem;
     font-weight: bold;
@@ -261,6 +261,8 @@ section {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1em; }
+    .work-item--title {
+      font-size: 1.15rem; }
   .footer {
     text-align: left; }
     .footer-inner {
@@ -306,7 +308,7 @@ section {
       margin-top: -20px;
       text-align: right; }
   .hero-inner {
-    min-height: 40vh; }
+    min-height: 50vh; }
   .hero-content--title {
     color: #fff;
     font-size: 3rem;
@@ -319,6 +321,8 @@ section {
   .work-item {
     display: flex;
     justify-content: space-between; }
+    .work-item--title {
+      font-size: 1.18rem; }
     .work-item--list {
       flex-basis: 32%; }
   .footer {
