--- a/src/styles/scss/modules/_hero.scss
+++ b/src/styles/scss/modules/_hero.scss
@@ -1,10 +1,8 @@
 .hero {
-    margin-top: -20px;
-    padding-top: 0;
     width: 100%;
 
     &-inner {
-    min-height: 30vh;
+    min-height: 60vh;
     background:linear-gradient(rgba($secondary_color, 0.6), rgba($secondary_color, 0.3)), url("https://images.unsplash.com/photo-1521185496955-15097b20c5fe?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b73970e97b923e72be9355cb15099091&auto=format&fit=crop&w=1294&q=80") no-repeat right center / cover;
     position: relative;
     }
@@ -12,7 +10,7 @@
     &-content {
         width: 100%;
         position: absolute;
-        top: 45%;
+        top: 50%;
         left: 0;
         transform: translateY(-50%);
         text-align: center;
