--- a/src/styles/scss/modules/_logo.scss
+++ b/src/styles/scss/modules/_logo.scss
@@ -1,3 +1,5 @@
 .logo {
     color: $primary_color;
+    font-size: 3rem;
+    margin: 0;
 }
