--- a/src/styles/scss/modules/_work.scss
+++ b/src/styles/scss/modules/_work.scss
@@ -22,7 +22,7 @@
     }
 
     &--title {
-        font-size: 1.15rem;
+        font-size: 1rem;
         margin-top: 10px;
         text-align: center;
         text-transform: uppercase;
